fix z-index of return to top button

--- a/source/stylesheets/styles.css.scss
+++ b/source/stylesheets/styles.css.scss
@@ -273,7 +273,7 @@ footer {
 .returntotop {
     position: fixed;
     background-color: $logocolor;
-    //width: 100%;
+    z-index: 99;
 }
 
 .returntotop:hover, .submit:hover {
